5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1649_2704.log
== SUBMITION (2019-04-15 23:08:02) 
-- CODE:
nota= float(input("nota do aluno"))
boni=input("o aluno tem bonificacao :")
if boni.upper(== "S"):
	print(nota + 10/100 * nota)
else: 
	print(nota)
-- EXECUTION TIME:
0.136064
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 3
    if boni.upper(== "S"):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:08:35) 
-- CODE:
nota= float(input("nota do aluno"))
boni=input("o aluno tem bonificacao :")
if boni.upper()== "S":
	print(nota + 10/100 * nota)
else: 
	print(nota)
-- EXECUTION TIME:
0.192158
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
